change to libzip-dev

--- a/5.6/apache/Dockerfile
+++ b/5.6/apache/Dockerfile
@@ -24,7 +24,7 @@ RUN apt-get update && apt-get install -y \
 		libsqlite3-0 \
 		libxml2 \
 		xz-utils \
-		libzip2 \		
+		libzip-dev \		
 	--no-install-recommends && rm -r /var/lib/apt/lists/*
 
 ENV PHP_INI_DIR /usr/local/etc/php
